projects/bot_eval_run/batch_1770643297744/python-ai-stdlib-oracle_run_01/iterations/07/cmd_python_-m_compileall_-q_mini_ai_tests.stdout.txt
*** Error compiling 'mini_ai\\markov.py'...
  File "mini_ai\markov.py", line 24
    context = random.choice([c for c in self.transitions for c])
                                                              ^
SyntaxError: invalid syntax

